Closed
Bug 607573
Opened 15 years ago
Closed 15 years ago
<input type=hidden> should not set frameset-ok to "not ok"
Categories
(Core :: DOM: HTML Parser, defect, P2)
Core
DOM: HTML Parser
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | betaN+ |
People
(Reporter: snkinkar2002, Assigned: hsivonen)
References
Details
(Whiteboard: HTML5)
Attachments
(2 files)
|
409 bytes,
text/html
|
Details | |
|
3.25 KB,
patch
|
sicking
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 5.1; rv:2.0b6) Gecko/20100101 Firefox/4.0b6
Build Identifier: Mozilla/5.0 (Windows NT 5.1; rv:2.0b6) Gecko/20100101 Firefox/4.0b6
HTML page with frameset does not load if there is any element in-between </head> and <frameset> tag
Reproducible: Always
Steps to Reproduce:
-------------------------------------------------------------------------
<HTML>
<HEAD>
<TITLE>A Basic Example of Frames</TITLE>
<script language="JavaScript1.2">
function on_load()
{
alert(" Frameset loaded ");
}
</script>
</HEAD>
<form name="tempForm" method="post">
<input type="hidden" name="Message" value=" Sample Value ">
</form>
<FRAMESET ROWS="75%, *" COLS="*, 40%" onload="on_load()">
<FRAME SRC="framea.html">
<FRAME SRC="frameb.html">
<FRAME SRC="framec.html">
<FRAME SRC="framed.html">
</FRAMESET>
</HTML>
-------------------------------------------------------------------------
Save above text as sample.html and try to load it in Firefox4b6.
Actual Results:
Page does not display. Frameset is not loaded.
Expected Results:
Page should have displayed four frames specified in the <frameset> tag.
If I put below tag after </frameset> then it works properly.
<form name="tempForm" method="post">
<input type="hidden" name="Message" value=" Sample Value ">
</form>
Mozilla/5.0 (Windows NT 5.1; rv:2.0b8pre) Gecko/20101027 Firefox/4.0b8pre
Works with HTML5.enabled = false
Henri, is this a known issue?
Component: General → HTML: Parser
OS: Windows XP → All
Product: Firefox → Core
QA Contact: general → parser
Hardware: x86 → All
Whiteboard: HTML5
Version: unspecified → Trunk
Comment 3•15 years ago
|
||
Er... We really broke that? Form plus hidden input before frameset is one of those cases the old parser made sure not to break, because actual sites use it, last I checked.
Status: UNCONFIRMED → NEW
blocking2.0: --- → ?
Ever confirmed: true
| Assignee | ||
Comment 4•15 years ago
|
||
(In reply to comment #2)
> Henri, is this a known issue?
Not known until now. IE special-cases type=hidden, so it seems the spec is based on incomplete reverse engineering here.
Filed a spec bug.
Assignee: nobody → hsivonen
Priority: -- → P2
Summary: HTML page with frameset does not load if there is other element in-between </head> and <frameset> tag → <input type=hidden> should not set frameset-ok to "not ok"
| Assignee | ||
Comment 7•15 years ago
|
||
The spec bug hasn't been resolved yet, but it's obvious how it should be resolved.
Attachment #490836 -
Flags: review?(jonas)
Attachment #490836 -
Flags: review?(jonas) → review+
| Assignee | ||
Comment 8•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•