Bug 607573 - Make <input type=hidden> not set frameset-ok to "not ok". r=jonas, a=blocking2.0-betaN.